<resources>
    <string name="app_name">FitRM</string>
    <string name="authorization">Авторизация</string>
    <string name="login">Вход</string>
    <string name="sign_up">Регистрация</string>
    <string name="login_hint">Введите логин</string>
    <string name="password_hint">Введите пароль</string>
    <string name="repeat_password_hint">Повторите пароль</string>
    <string name="login_signup_hint">Придумайте логин</string>
    <string name="password_signup_hint">Придумайте пароль</string>
    <string name="sign_up_button">Зарегистрироваться</string>
    <string name="password_repeat_hint">Повторите пароль</string>
    <string name="search">Поиск</string>
    <string name="fitrm">FitRM</string>
    <string name="categories">Категории</string>
    <string name="sportpit">Купить спортивное питание</string>
    <string name="video">Упражнения</string>
    <string name="navigation">Навигация</string>
    <string name="protein">Протеин</string>
    <string name="creatine">Креатин</string>
    <string name="glutamine">Глютамин</string>
    <string name="Play">Тренировка спины</string>
    <string name="Play2">Мотивация</string>
    <string name="error">Ошибка загрузки</string>
    <string name="training">Лучшая программа тренировок</string>
    <string name="refresh">Обновить</string>
</resources>